# CopperSpice-Taschenrechner

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md  do-config  main.cpp
Taschenrechner/: do-build
Taschenrechner/deploy/: example_1
Taschenrechner_von_ChatGPT/: do-config  main.cpp
Taschenrechner_von_ChatGPT/deploy/: example_1
